--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <body>
-    <script src="./index.ts"></script>
+    <div id="app"></div>
+    <script src="index.tsx"></script>
   </body>
 </html>
